--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -8,10 +8,14 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongoose": "^6.0.8",
+    "mongoose-unique-validator": "^2.0.4",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
