--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "lint": "eslint ."
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -19,6 +20,7 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
     "nodemon": "^2.0.13"
   }
 }
