--- a/part4/bloglist/.env
+++ b/part4/bloglist/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://kay:Kahyohde1@cluster0.if3fi.mongodb.net/fullStackOpen?retryWrites=true&w=majority
 MONGO_URI_TEST=mongodb+srv://kay:Kahyohde1@cluster0.if3fi.mongodb.net/fullStackOpen?retryWrites=true&w=majority
 PORT=3001
+SECRETE=fullStackOpen
