--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -20,10 +20,15 @@
     "supertest": "^6.1.6"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.8"
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.8",
+    "mongoose-unique-validator": "^3.0.0",
+    "morgan": "^1.10.0"
   }
 }
