--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "NODE_ENV=test jest --verbose --runInBand",
     "start": "NODE_ENV=production node ./index.js",
-    "dev": "NODE_ENV=development nodemon ./index.js"
+    "dev": "NODE_ENV=development nodemon ./index.js",
+    "lint": "eslint .",
+    "start:test": "NODE_ENV=test nodemon ./index.js"
   },
   "keywords": [],
   "author": "",
