--- a/part9/first exercise/package.json
+++ b/part9/first exercise/package.json
@@ -6,14 +6,25 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "calculateBmi": "ts-node calculateBmi.ts",
-    "exerciseCalculator": "ts-node exerciseCalculator.ts"
+    "exerciseCalculator": "ts-node exerciseCalculator.ts",
+    "dev": "ts-node-dev .",
+    "lint": "eslint --ext .ts ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^16.11.6",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "eslint": "^8.2.0",
     "ts-node": "^10.4.0",
+    "ts-node-dev": "^1.1.8",
     "tslib": "^2.3.1"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.13",
+    "consola": "^2.15.3",
+    "express": "^4.17.1"
   }
 }
