--- a/part9/patientor/package.json
+++ b/part9/patientor/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.21.1",
     "formik": "^2.2.6",
     "react": "^17.0.1",
+    "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "semantic-ui-css": "^2.4.1",
@@ -16,6 +17,7 @@
     "@types/jest": "26.0.20",
     "@types/node": "12.11.7",
     "@types/react": "^17.0.2",
+    "@types/react-datepicker": "^4.3.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
@@ -44,6 +46,4 @@
       "last 1 safari version"
     ]
   }
-
-  
 }
